[package]
#FIXME: add more metadata?
name = "spinnrd"
version = "1.1.0"
authors = ["James Wescott <james@wescottdesign.com>"]

# [package]
# include = [
# 	"src/*.rs",
# 	"build.rs",
# 	"spinnr.sh",
# 	"design.md",
# ]

[features]
sysd = ["systemd"]
# Mostly for backends
default	= ["fsaccel"]
fsaccel	= ["glob"]
#~ iioaccel isn't written yet - need libiio bindings
# iioaccel	= ["iio"]

[dependencies]
# c_fixed_string	= "~0.2.0" #to read buffer strings passed to libc functions
lazy_static	= "~1.2.0"
daemonize	= "~0.3.0"
simplelog	= "~0.5.3"
chrono	= "~0.4.6"
signal	= "~0.6.0"
syslog	= "~4.0.1"
# errno	= "~0.2.4"
regex	= "~1.1.0"
clap	= "~2.32.0"
libc	= "~0.2.49"
log	= { version = "~0.4.6", features = ["std"] }

# optional
systemd	= { version = "~0.4.0", optional = true }

# For fsaccel
glob	= { version = "~0.2.11", optional = true }

[build-dependencies]
built = "0.3"
